Practice summary buttons spacing fixed

--- a/wsgi/openshift/geography/static/sass/_practice.sass
+++ b/wsgi/openshift/geography/static/sass/_practice.sass
@@ -1,3 +1,7 @@
+#container
+  .btn
+    margin-left: 10px
+    margin-bottom: 10px
 .practice
   .btn
     margin-left: 10px
